
* GITHUB#14874: Improve off-heap KNN byte vector query performance in cases where indexing and search are performed by the same process. (Kaival Parikh)

* GITHUB#15043: Vectorize L2 normalize function. (Ramakrishna Chilaka)

* GITHUB#15085, GITHUB#15092: Hunspell suggestions: Ensure candidate roots are not worse before updating. (Ilia Permiashkin)

Bug Fixes
---------------------
* GITHUB#14049: Randomize KNN codec params in RandomCodec. Fixes scalar quantization div-by-zero
  when all values are identical. (Mike Sokolov)

* GITHUB#14075: Remove duplicate and add missing entry on brazilian portuguese stopwords list. (Arthur Caccavo)

* GITHUB#7865 AbstractRangeQueryNode#toQueryString(EscapeQuerySyntax) now
  returns a string which can be parsed back into the original node.
  (Peter Barna, Adam Schwartz)

* GITHUB#14847: Allow Faiss vector format to index >2GB of vectors per-field per-segment by using MemorySegment APIs
  (instead of ByteBuffer) to copy bytes to native memory. (Kaival Parikh)

* GITHUB#15213: Don't normalize centroids with zero samples, which caused divide-by-zero. (Mike Sokolov)

* GITHUB#15125: Handle inconsistent schema on flush with index sorts (Nhat Nguyen)

* GITHUB#10309: Do not merge term queries with different docFreq. Fixes wrong scores in some queries that included
  term query and fuzzy query. (Rafał Harabień)

* GITHUB#15434: Don't override boost of conflicting expanded phrases by taking the max boost in markTerminal for FVHighlighter (Luana Fragoso)

* GITHUB#12561: UAX29URLEmailTokenizer matched emails with commas and invalid
  periods in the local part. (Eran Yarkon)

Changes in Runtime Behavior
---------------------
* GITHUB#14187: The query cache is now disabled by default. (Adrien Grand)

Build
---------------------
* GITHUB#15327: New low-level build options to detect abuse of LuceneTestCase.random():
  tests.random.maxacquires and tests.random.maxcalls (Robert Muir, Dawid Weiss)
